# RadioScout

./: .gitignore  Cargo.toml  README.MD  diesel.toml
.devcontainer/: devcontainer.json
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.tsx  utils.ts
src/: main.rs
src/api/: upload.rs
src/utils/: logging.rs
src/ws/: connection.rs
