[package]
name = "radio-scout"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"]}
axum-extra = "0.9.3"
clap = { version = "4.5.7", features = ["derive"] }
dotenvy = "0.15.7"
fern = "0.6.2"
humantime = "2.1.0"
log = "0.4.21"
mime_guess = "2.0.4"
rust-embed="8.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
socketioxide = "0.13.1"
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
diesel = { version = "2.2.0", features = ["postgres"] }